plugins {
    id 'java'
    id 'org.springframework.boot' version '3.5.0'
    id 'io.spring.dependency-management' version '1.1.7'
}

group = 'store.lastdance'
version = '0.0.1-SNAPSHOT'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(17)
    }
}

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

repositories {
    mavenCentral()
}

dependencies {
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.springframework.boot:spring-boot-starter-security'
//    implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
    implementation 'org.springframework.boot:spring-boot-starter-web'
//    implementation 'org.thymeleaf.extras:thymeleaf-extras-springsecurity6'
    implementation 'org.springframework.boot:spring-boot-starter-validation'

    implementation 'org.springframework.boot:spring-boot-starter-aop'
    implementation 'org.springframework:spring-webflux'
    implementation 'io.projectreactor:reactor-core'
    compileOnly 'org.projectlombok:lombok'
    developmentOnly 'org.springframework.boot:spring-boot-devtools'
    runtimeOnly 'org.postgresql:postgresql'
    annotationProcessor 'org.projectlombok:lombok'
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testImplementation 'org.springframework.security:spring-security-test'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
    testRuntimeOnly 'com.h2database:h2'

    // OAuth2
    implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
    // JWT
    implementation 'io.jsonwebtoken:jjwt-api:0.12.6'
    runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.12.6'
    runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.12.6'

    // https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-actuator
    implementation 'org.springframework.boot:spring-boot-starter-actuator:3.5.0'
    // https://mvnrepository.com/artifact/org.springdoc/springdoc-openapi-starter-webmvc-ui
    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.8.6'

    // https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-mail
    implementation 'org.springframework.boot:spring-boot-starter-mail:3.5.3'

    // Redis
    implementation 'org.springframework.boot:spring-boot-starter-data-redis'

    // S3
    // https://mvnrepository.com/artifact/io.awspring.cloud/spring-cloud-aws-starter-s3
    implementation 'io.awspring.cloud:spring-cloud-aws-starter-s3:3.4.0'

    // WebClient
    implementation 'com.fasterxml.jackson.core:jackson-databind'

    // https://mvnrepository.com/artifact/org.apache.tika/tika-core
    implementation 'org.apache.tika:tika-core:3.2.0' // 파일 형식 감지

    runtimeOnly 'io.micrometer:micrometer-registry-prometheus'

    // QueryDSL
    implementation 'com.querydsl:querydsl-jpa:5.1.0:jakarta' // jakarta 버전 명시
    annotationProcessor "com.querydsl:querydsl-apt:5.1.0:jakarta" // Q-Type 생성을 위한 어노테이션 프로세서
    annotationProcessor "jakarta.annotation:jakarta.annotation-api" // Jakarta 어노테이션 API
    annotationProcessor "jakarta.persistence:jakarta.persistence-api" // Jakarta Persistence API

}

// QueryDSL Q-Type 생성 위치 지정
def generatedQuerydslDir = layout.buildDirectory.dir("generated/querydsl")

sourceSets {
    main {
        java {
            srcDirs generatedQuerydslDir
        }
    }
}

tasks.withType(JavaCompile).configureEach {
    options.generatedSourceOutputDirectory.set(generatedQuerydslDir)
}

clean {
    delete generatedQuerydslDir.get().asFile
}

tasks.named('test') {
    useJUnitPlatform()
    maxHeapSize = "768m"
}
